# fastapi_l

./: .clang-format  .gitignore  .gitignore.fastapi_demo  .gitignore.fastapi_demo_with_bazel  CMakeLists.txt  Dockerfile  Procfile  README.md  conanfile.txt  docker-compose.yml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: alembic.ini  celery_work.py  constants.py  logger.py  main.py  misc.py
app/alembic/: env.py
app/alembic/depred_version/: 03cd32c50eb8_add_vote_schema.py  5437b85fc3e7_create_users.py  d56c431cfa3f_create_users_table_users_details_and_.py
app/alembic/versions/: 03cd32c50eb8_add_vote_schema.py  16afde913cb3_add_account_status_id_col_to_users_.py  2c6d65b42c8a_create_posts.py  2c6d65b42c8a_init.py  2fbfb9f74984_add_users.py  5437b85fc3e7_create_users.py  7cb3bb78ea41_add_account_status_id_surname_given_.py  7e609216148e_add_posts.py  84dd88e66feb_create_users_relate_table.py  d56c431cfa3f_create_users_table_users_details_and_.py  fe0e0f8edb24_insert_value_to_users_status_table_and_.py
app/celery_app/: celery_work.py  pickling.py  task.py
app/cmds/: alembic_cmds.py  api_services.py
app/configuration/: configuration.py  load_config.py  misc.py  process_options.py
app/configuration/api_service_config/: backup_config.yaml  config_fastapi.py
app/enums/: country_code.py  gender.py  register.py  runmode.py
app/models/: cache.py  m_post.py  m_user.py  misc.py  post.py  user.py
app/module/: post.py  to_cache.py
app/modules/: cache.py  misc.py  post.py  user.py
app/persistences/: alembic_migrations.py  base.py  engine.py  sqlalchemy_engine.py
app/persistences/fastapi_dependency/: db.py
app/persistences/postgresql/modules/: posts.py  users.py  votes.py
app/persistences/postgresql/modules/user/: account_status.py  user_registration.py  users.py  users_account.py  users_address.py  users_country.py  users_detail.py  users_detail_in_formosa.py  users_id_card_in_formosa.py  users_in_formosa.py  users_outline.py  users_outline_table.py  users_registration.py  users_status.py
app/persistences/redis/: cache.py  connection.py  key_format.py  meta.py
app/robot_test/: test_login_feature.robot  test_main_feature.robot
app/robot_test/sut/: login.py  test_login.py  test_main.py
app/routers/: auth.py  login.py  post.py  products.py  test.py  user.py  vote.py
app/routers/dependency/database/: redis.py  sqlalchemy_db.py
app/routers/dependency/pydantic/: post.py  pyd_post.py  pyd_user.py  user.py
app/routers/dependency/security/: oauth2.py
app/routers/dependency/validation/auth/: oauth2.py
app/routers/dependency/validation/pydantic/: user.py
app/routers/fastapi_dependency/database/: redis.py  sqlalchemy_db.py
app/routers/fastapi_dependency/validation/auth/: oauth2.py
app/routers/fastapi_dependency/validation/pydantic/: user.py
app/routers/validation/auth/: oauth2.py
app/routers/validation/fast_api_pydantic/: auth.py  order.py  post.py  products.py  user.py
app/validation/fast_api_pydantic/: post.py
datacpp/: BasicConfig.h  BasicConfig.h.in  CMakeLists.txt
datacpp/Logger/include/Demo/: Logger.h
datacpp/Logger/src/: Logger.cpp
datacpp/configuration/: CMakeLists.txt
datacpp/src/: main.cpp
order/: main.py
order/configuration/: load_config.py  process_options.py
order/router/: orders.py
order/router/validation/fast_api_pydantic/: order.py
testcpp/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Test  TutorialConfig.h  TutorialConfig.h.in  VersionConfig.h  VersionConfig.h.in  conanfile.txt  main.cpp
testcpp/Logger/: CMakeLists.txt
testcpp/Logger/include/Demo/: Logger.h
testcpp/Logger/src/: Logger.cpp
testcpp/MathFunctions/: CMakeLists.txt  makeTable  mathFunctions.h  mysqrt.cpp
testcpp/odbc/: odbc.ini  odbcsql.sln
testcpp/src/: Example.cxx  main.cpp
