[metadata]
name = fastapi_learn
version = 0.0.1

[options]
package_dir=
    =app
packages = find:
include_package_data=True
install_requires = 
    python_version>="3.10.4"


[options.packages.find]
where=app
include = *

[options.entry_points]
console_scripts = 
    api_services = cmds.api_services:cli
    alembic_cmds = cmds.alembic_cmds:cli